--- a/stlyes/blog.css
+++ b/stlyes/blog.css
@@ -1,1 +1,2 @@
 #lion{text-align: center; color: rgb(232, 232, 142); background-color: rgb(75, 75, 219); width 90%; border: 3px dotted bisque; border-radius: 8px; margin: 25px; padding: 5px;}
+#stamford{text-align: center; color: rgb(232, 232, 142); background-color: rgb(57, 57, 159); width: 88%; border: 2px dotted bisque; border-radius: 9px; margin: 20px; padding: 8px;}
